# desktop-llm-helper

./: .gitignore  .rules  CMakeLists.txt  README.md  build_and_installer.bat  configstore.cpp  configstore.h  hotkeymanager.cpp  hotkeymanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  taskwidget.cpp  taskwidget.h  taskwidget.ui  taskwindow.cpp  taskwindow.h
.github/workflows/: release.yml
installer/config/: config.xml
resources/: resources.qrc
